--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -12,12 +12,9 @@ setTimeout(function sunrise () {
 
 <div class="default-page">
     <div class="header">
-        <h1 id="main-title" class="container"><%= __('A brand new app.') %></h1>
-        <h3 class="container">You're looking at: <code><%= view.pathFromApp + '.' +view.ext %></code></h3>
+        <h1 id="main-title" class="container">Sailes Example 01</h1>
     </div>
     <div class="main container clearfix">
-        <!-- <h1>Getting started</h1>
-        <p>Don't worry, we've got your back.</p> -->
         <ul class="getting-started">
             <li class="clearfix">
                 <div class="step">
