--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -12,7 +12,7 @@ setTimeout(function sunrise () {
 
 <div class="default-page">
     <div class="header">
-        <h1 id="main-title" class="container">Sailes Example 01</h1>
+        <h1 id="main-title" class="container">Sails Example 01</h1>
     </div>
     <div class="main container clearfix">
         <ul class="getting-started">
