--- a/views/activity/index.ejs
+++ b/views/activity/index.ejs
@@ -1,2 +1,11 @@
-<p>This is the activity list page.</p>
-<p>the name is {{name}}</p>
+<h2>This is the activity list page.</h2>
+<p>The Furby's name is <%= name %></p>
+
+<p>The Furby activities are:</p>
+<% for(var i=0; i<activities.length; i++) {%>
+   <div class="row">
+     <div class="col-md-4"><%= activities[i] %></div>
+     <div class="col-md-8">Fun!</div>
+   </div>
+<% } %>
+
