--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -13,7 +13,7 @@
 
   <body>
    <div class="container">
-    <div style="height: 10px; color: red">
+    <div style="height: 10px; background: red">
     </div>
     <%- body %>
 
