--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -3,4 +3,4 @@
 
 <h2>Welcome to test program SA01</h2>
 <a href="/activity">Activities</a>
-<a href="/questions">Questions</a>
+<a href="/question">Questions</a>
