--- a/views/question/index.ejs
+++ b/views/question/index.ejs
@@ -1,9 +1,8 @@
 <h2>This is the question list page.</h2>
 
-
 <h3>From Monty Python</h3>
 
-<table cellspacing="3" cellpadding="3" border="1">
+<table class="table" style="width: 400px">
 <% for (var i=0; i < questions.length; i++) { %>
    <tr>
      <td><%= questions[i] %></td>
