added definition for small size screens

--- a/views/activity/index.ejs
+++ b/views/activity/index.ejs
@@ -3,11 +3,11 @@
 
 <p>The Furby activities are:</p>
 <% for (var i=0; i<activities.length; i++) { %>
-   <div class="row" style="background-color: red">
-     <div class="col-md-4" style="background-color: green">
+   <div class="row">
+     <div class="col-md-4 col-sm-4">
        <%= activities[i] %>
      </div>
-     <div class="col-md-8">Fun!</div>
+     <div class="col-md-8 col-sm-8">Fun!</div>
    </div>
 <% } %>
 
