--- a/views/activity/index.ejs
+++ b/views/activity/index.ejs
@@ -4,10 +4,10 @@
 <p>The Furby activities are:</p>
 <% for (var i=0; i<activities.length; i++) { %>
    <div class="row">
-     <div class="col-md-4 col-sm-4">
+     <div class="col-md-4 col-sm-4 col-xs-4">
        <%= activities[i] %>
      </div>
-     <div class="col-md-8 col-sm-8">Fun!</div>
+     <div class="col-md-8 col-sm-8 col-xs-8">Fun!</div>
    </div>
 <% } %>
 
